<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaceRotations">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button7_label"
                android:onClick="button7Pressed"
                />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button8Pressed"
                android:text="@string/button8_label" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button9Pressed"
                android:text="@string/button9_label"
                android:visibility="visible" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button10Pressed"
                android:text="@string/button10_label"
                android:visibility="visible" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button11Pressed"
                android:text="@string/button11_label"
                android:visibility="visible" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button12Pressed"
                android:text="@string/button12_label"
                android:visibility="visible" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button13Pressed"
                android:text="@string/button13_label"
                android:visibility="visible" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button14Pressed"
                android:text="@string/button14_label"
                android:visibility="visible" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button15Pressed"
                android:text="@string/button15_label"
                android:visibility="visible" />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button16Pressed"
                android:text="@string/button16_label" />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button17Pressed"
                android:text="@string/button17_label" />

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button18Pressed"
                android:text="@string/button18_label" />

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button19Pressed"
                android:text="@string/button19_label" />

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button20Pressed"
                android:text="@string/button20_label" />

            <Button
                android:id="@+id/button21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button21Pressed"
                android:text="@string/button21_label" />

            <Button
                android:id="@+id/button22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button22Pressed"
                android:text="@string/button22_label" />

            <Button
                android:id="@+id/button23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button23Pressed"
                android:text="@string/button23_label" />

            <Button
                android:id="@+id/button24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="button24Pressed"
                android:text="@string/button24_label" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>